--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,10 +1,11 @@
-$color1: #dd6e42;
-$color2: #5a9367;
-$color3: #13293d;
-$color4: #16324f;
-$color5: #d7cdcc;
+$color1: rgba(215, 7, 93, 1);
+$color2: rgba(172, 128, 160, 1);
+$color3: rgba(52, 89, 149, 1);
+$color4: rgba(25, 25, 35, 1);
+$color5: rgba(137, 170, 230, 1);
+
 $white: #ffffff;
-$grey: #3f3f3f;
+$grey: #353535;
 $light-grey: #9b9b9b;
 
 $color1-opac: rgba(221, 110, 66, 0.836);
