--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -224,6 +224,8 @@
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 500px;
+      grid-template-rows: 500px;
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -232,12 +234,18 @@
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
 }
 
 .size-guide__tabs {
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3 / 4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
 }
 
 /*-------------- 4. House Storage Page Sections ----*/
@@ -1149,21 +1157,68 @@ button[type="submit"], .btn-large[type="submit"] {
 }
 
 /*--------------------------- 8. Tabs ----*/
+.size-guide__panes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.size-guide__panes h3 {
+  margin-top: 2rem;
+}
+
 .pane {
   display: none;
+}
+
+.pane img {
+  width: 25rem;
+  height: auto;
 }
 
 .pane.pane-active {
   display: block;
 }
 
-.size-guide__tabs ul {
+.tab-nav {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: (1fr)[7];
-      grid-template-rows: repeat(7, 1fr);
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
+  -ms-grid-rows: (1fr)[7];
+      grid-template-rows: repeat(7, 1fr);
+  height: 100%;
+  cursor: pointer;
+}
+
+.tab-item {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  grid-row: span 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: auto;
+  height: auto;
+  font-weight: bold;
+}
+
+.tab-item:hover {
+  background: #27426f;
 }
 
 @-webkit-keyframes bg-scale {
