--- a/src/styles/scss/_components.scss
+++ b/src/styles/scss/_components.scss
@@ -341,16 +341,49 @@ button[type="submit"] {
 }
 
 /*--------------------------- 8. Tabs ----*/
+.size-guide__panes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  & h3 {
+    margin-top: 2rem;
+  }
+}
+
 .pane {
   display: none;
+
+  & img {
+    width: 25rem;
+    height: auto;
+  }
 }
 
 .pane.pane-active {
   display: block;
 }
 
-.size-guide__tabs ul {
+.tab-nav {
   display: grid;
-  grid-template-rows: repeat(7, 1fr);
   grid-template-columns: 1fr;
+  grid-template-rows: repeat(7, 1fr);
+  height: 100%;
+  cursor: pointer;
+}
+
+.tab-item {
+  grid-column: 1 / 2;
+  grid-row: span 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  height: auto;
+  font-weight: bold;
+
+  &:hover {
+    background: darken($color: $color3, $amount: 10%);
+  }
 }
